2009-11-19  Steve Block  <steveblock@google.com>

        Reviewed by Darin Fisher.

        Android port lacks configuration in Platform.h and config.h.
        https://bugs.webkit.org/show_bug.cgi?id=31671

        Build change only. No new tests possible.

        * config.h: Modified. Added Android-specific configuration.

2009-11-20  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Darin Adler.

        Change default stylesheet to reset text indentation for ruby elements by default.
        (https://bugs.webkit.org/show_bug.cgi?id=31247)

        Test: fast/ruby/ruby-text-indent.html

        * css/html.css: reset text-indent on <ruby> and <rt> elements 

2009-11-19  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Darin Adler.

        Fixes <http://webkit.org/b/22754>.
        Web Inspector: Keyboard shortcut for Element finder.

        Use Command + Shift + C as a shortcut for Node Search, to 
        match the Firebug shortcut to do the same thing.

        * inspector/front-end/ElementsPanel.js:
        (WebInspector.ElementsPanel.prototype.handleKeyEvent):

2009-11-19  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=31690
        Make SocketStreamHandleCFNet work on Windows

        * WebCore.vcproj/WebCore.vcproj: Added LoaderRunLoopCF.

        * platform/network/ResourceHandle.h: Removed loaderRunLoop().

        * platform/network/cf/LoaderRunLoopCF.cpp: Added.
        (WebCore::emptyPerform):
        (WebCore::runLoaderThread):
        (WebCore::loaderRunLoop):
        * platform/network/cf/LoaderRunLoopCF.h: Added.
        Moved the run loop that we use for CFNetwork from ResourceHandle to its own file, because
        it's needed for more than just resource loading.

        * platform/network/cf/ResourceHandleCFNet.cpp: Use loaderRunLoop() from its new location.
